fix Delete/Add user operations Begin responsive design for mobile users Ability to delete shifts from calendar

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -67,3 +67,11 @@ tr, td {
     font-weight: 700;
     font-style: normal;
 }
+
+.calendar-md {
+    width: 100%;
+}
+
+.calendar-sm {
+    width: 30rem;
+}
